# game_of_life

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  board_test.cpp  game_of_life.sln  game_of_life.vcxproj  game_of_life.vcxproj.filters
ext/tbb41_20130613oss/lib/: libtbb.dylib  libtbb_debug.dylib
game_of_life/: board.cpp  board.h  game_of_life.1  main.cpp
game_of_life.xcodeproj/: project.pbxproj
game_of_life.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
game_of_life.xcodeproj/xcuserdata/chris.xcuserdatad/xcschemes/: game_of_life.xcscheme  xcschememanagement.plist
game_of_life/x64/Debug/: game_of_life.exe.recipe  game_of_life.ilk  game_of_life.vcxproj.FileListAbsolute.txt  vc143.idb
game_of_life/x64/Debug/game_of_life.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  game_of_life.lastbuildstate  game_of_life.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated.js  board_8cpp.html  board_8cpp_source.html  board_8h.html  board_8h.js  board_8h_source.html  class_board-members.html  class_board.html  class_board.js  classes.html  dir_41848f98a18a219562a99f59c7ed2682.html  files.html  files.js  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp_source.html  md__r_e_a_d_m_e.html  navtree.js  navtreeindex0.js  pages.html
html/search/: all_61.js  all_62.js  all_64.js  all_67.js  all_70.js  all_72.js  files_62.js  functions_65.js  functions_67.js  functions_72.js  functions_73.js  pages_67.js  search.js  variables_62.js
include/: board.h
src/: CMakeLists.txt  board.cpp  board.h  main.cpp
tbb41_20130613oss/lib/: libtbbmalloc.dylib  libtbbmalloc_debug.dylib
test/: board_test.cpp
